[package]
name = "fixed_str"
description = "Fixed-size, null-padded UTF-8 string type with const-safe construction and binary serialization support."
version = "0.9.1"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/crabcode/fixed_str"
keywords = ["string", "utf8", "fixed-length", "no_std", "binrw"]
categories = ["data-structures", "encoding", "no-std"]

[features]
default = ["std", "const_mut_refs"]
binrw = ["dep:binrw"]
memchr = ["dep:memchr"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
const_mut_refs = []  # requires rustc 1.83, disable for 1.60
std = []

[dependencies]
binrw = { version = ">=0.11.1", optional = true }  # uses Args<'a> (>=0.11.0) and BinRead/BinWrite (>=0.11.1)
memchr = { version = ">=0.1", optional = true }
rkyv = { version = "0.8", optional = true, default-features = false, features = ["alloc", "bytecheck"] }
serde = { version = ">=1.0", features = ["derive"], optional =  true }

[dev-dependencies]
criterion = "0.5"
serde_test = "1.0"

[badges]
maintenance = { status = "as-is" }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "hex_format"
harness = false